2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_getimage.c, tiffio.h: More ABI corrections. 
	Removed SubsamplingHor/Ver from TIFFRGBAImage structure.
	  http://bugzilla.maptools.org/show_bug.cgi?id=1980

2008-12-18  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_getimage.c,tiffio.h: removed all use of UaToAa and
	Bitmap16to8 arrays in TIFFRGBAImage structure to restore ABI
	compatability.  These were just an attempt to speed up processing
	with precalculated tables.
	  http://bugzilla.maptools.org/show_bug.cgi?id=1979

	* libtiff/tif_codec.c: Avoid printing c->name if it does not exist.

2008-10-21  Andrey Kiselev  <dron@ak4719.spb.edu>

	* libtiff/tif_jbig.c: Support the JBIG-KIT 2.0 (compatibility with
	the older versions retained).

2008-09-05  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Use dynamically allocated array instead of static
	when constructing output file names.

2008-09-03  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Get rid of unsafe strcpy()/strcat() calls when
	doing the filename/path construction.

	* tools/tiff2pdf.c: More appropriate format string in
	t2p_write_pdf_string(); avoid signed/unsigned mismatch.

	* libtiff/tif_lzw.c: Properly zero out the codetable. As per bug

	http://bugzilla.maptools.org/show_bug.cgi?id=1929

	* libtiff/tif_lzw.c: Properly zero out the string table. Fixes
	CVE-2008-2327 security issue.

2008-05-24  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_codec.c: Avoid NULL pointer dereferencing for exotic 
	compression codec codes.

	* tif_dirread.c: zero tif->tif_dir after freeing the directory
	in TIFFReadCustomDirectory().  I don't exactly remember why this
	was important. 

	* tif_dirwrite.c: Fix potential memory leak writing large double
	tags. 

	* tif_dirread.c: Fix unchecked malloc result.

2008-01-30  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tif_fax3.c: Make find0span() and find1span() non-inline to
	make MSVC 6.0 compiler happy.
